01_K8S/factorial-cache-app/factorial-cache-service.yaml
# factorial-cache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: factorial-cache-service
  namespace: factorial
spec:
  selector:
    app: factorial-cache-app
  ports:
    - protocol: TCP
      port: 8080
